<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity1"
    android:background="@drawable/gradient_1">

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="14dp"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"
        android:id="@+id/btnActivity2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_activity_2"
        app:layout_constraintBottom_toTopOf="@+id/btnActivity3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="14dp"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"
        android:id="@+id/btnActivity3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_activity_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/img_pinguinos"
        app:layout_constraintBottom_toTopOf="@+id/btnActivity2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ilerna_pinguinos" />
</androidx.constraintlayout.widget.ConstraintLayout>